# Haxial-ref

./: .clang-format  AGENTS.md  CMakeLists.txt  CMakePresets.json  README-ANALYSIS.md  README.md
cmake/: CompilerWarnings.cmake  PlatformDetection.cmake
docs/protocol/: README.md  connection.md  constants.md  data-types.md  packets.md  transactions.md
docs/protocol/findings/: CURRENT_STATUS.md  FUNCTIONS.md  PROTOCOL.md  STRUCTS.md  UNKNOWNS.md  agents-md-updates.md  analysis-status.md  confirmed-constants.md  correction-summary.md  enum-correction.md  enums-created.md  enums-summary.md  errno-mapping-analysis.md  error-code-completion.md  error-codes-catalog.md  final-corrections-summary.md  final-policy-summary.md  final-summary.md  function-naming-review.md  globals-correction-summary.md  globals-review.md  helper-functions-renamed.md  honest-analysis-achievement.md  kdx-server-analysis.md  libhaxial-implementation-summary.md  linked-list-discovery.md  local-variables-clarification.md  magic-verification.md  naming-checklist.md  naming-policy-clarification.md  numerical-constants-review.md  packet-handling-flow.md  pascal-strings-discovery.md  renaming-progress.md  renaming-status-final.md  renaming-summary.md  server-state-discovery.md  serverstate-proper-naming.md  session-2-enum-correction-and-serverstate.md  session-3-sha1-correction.md  (+11 more)
libhaxial/: CMakeLists.txt  README.md
libhaxial/cmake/: haxialConfig.cmake.in
libhaxial/include/: haxial.h
libhaxial/include/haxial/: blowfish.h  errors.h  fnv1a.h  list.h  pstring.h  random.h  sha1.h
libhaxial/src/: errno_convert.c  errors.c  fnv1a.c  list.c  pstring.c  random.c
libhaxial/src/crypto/: blowfish.c  sha1.c
libhaxial/tests/: CMakeLists.txt  errno_convert_test.c  fnv1a_test.c  list_test.c  pstring_test.c  random_test.c  test_blowfish.c  test_errors.c  test_sha1.c
